# fast_blog

./: .coveragerc  .gitignore  app.py  pyproject.toml
src/config/: __init__.py
src/data/: __init__.py  blog.py  user.py  user_role.py
src/errors/: __init__.py  errors.py
src/model/: __init__.py  blog.py  user.py  user_role.py
src/service/: __init__.py  blog.py  user.py
src/test/test_unit/test_data/: test_blog.py  test_blog_data.py  test_user.py  test_user_data.py  test_user_role_data.py
src/test/test_unit/test_service/: test_blog_service.py  test_user_service.py
src/test/test_unit/test_web/: test_blog_web.py  test_user_web.py
src/web/: __init__.py
src/web/blog/: blog.py
src/web/user/: user.py
