[tool.poetry]
name = "fast-blog"
version = "0.1.0"
description = ""
authors = ["Ukeme Edet <ukemeedet2207@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
Faker = "^29.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
